# telegraph_cli

./: CHEATSHEET.md  Cargo.toml  DRY_REFACTORING_PLAN.md  FFI.md  FLUTTER_INTEGRATION.md  README.md  SEARCH.md
examples/: cli.rs  example_c.c  example_python.py  test_dll.c  test_ffi.rs
include/: logbook.h  tx_tracker.h
src/: activities.rs  api.rs  cli.rs  command.rs  db.rs  error.rs  ffi.rs  lib.rs  main.rs  transactions.rs
src/db/: activities.rs  categories.rs  journal.rs  macros.rs  mod.rs  persons.rs  places.rs  tags.rs  todos.rs  transactions.rs
src/ffi/: mod.rs
src/tracker/: activities.rs  domain_processor.rs  journal.rs  mod.rs  search.rs  todos.rs  transactions.rs
src/types/: activity.rs  category.rs  journal.rs  mod.rs  person.rs  place.rs  tag.rs  todo.rs  transaction.rs
tests/: ffi_integration.rs
