[package]
name = "tx_tracker"
version = "0.1.0"
edition = "2024"

[lib]
name = "tx_tracker"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tx_tracker"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
anyhow = "1"
libc = "0.2"
