[package]
name = "logbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "logbook"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
libc = "0.2"

# CLI dependencies (optional, for testing only)
[dev-dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
